--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "markdown-it": "^14.1.0",
+    "rollup-plugin-emit-files": "^2.0.0",
+    "rollup-plugin-img": "^1.1.0",
     "sass": "^1.89.0",
     "vite-plugin-toml": "^0.7.0",
     "vue": "^3.5.13",
